# meeting_scheduler

./: .gitignore  README.md  dev.sh  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
server/: config.py  database.py  main.py
server/apps/auth/: exceptions.py  models.py  router.py  service.py  utils.py
server/tests/: conftest.py  test_auth.py
src/: App.css  App.jsx  App.tsx  catchall.tsx  index.css  main.tsx  root.tsx  routes.tsx
src/app/: layout.tsx
src/app/home/: page.tsx
src/components/: app-sidebar.tsx
src/routes/: about.tsx  layout.tsx
src/types/: index.ts
