[tool.poetry]
name = "meeting-scheduler"
version = "0.1.0"
description = ""
authors = ["Dia <kangdiamond@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
radicale = "^3.3.1"
fastapi = {extras = ["all"], version = "^0.115.5"}
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
psycopg = "^3.2.3"
jose = "^1.0.0"
authlib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
